@@ -30,13 +30,16 @@
 
 import elasticapm
 from elasticapm.instrumentation.packages.asyncio.base import AsyncAbstractInstrumentedModule
-from elasticapm.instrumentation.packages.elasticsearch import ElasticSearchConnectionMixin
+from elasticapm.instrumentation.packages.elasticsearch import ElasticSearchConnectionMixin, ElasticsearchInstrumentation
 
 
 class ElasticSearchAsyncConnection(ElasticSearchConnectionMixin, AsyncAbstractInstrumentedModule):
     name = "elasticsearch_connection"
 
-    instrument_list = [("elasticsearch_async.connection", "AIOHttpConnection.perform_request")]
+    instrument_list = [
+        ("elasticsearch_async.connection", "AIOHttpConnection.perform_request"),
+        ("elasticsearch._async.http_aiohttp", "AIOHttpConnection.perform_request"),
+    ]
 
     async def call(self, module, method, wrapped, instance, args, kwargs):
         signature = self.get_signature(args, kwargs)
@@ -52,3 +55,18 @@ class ElasticSearchAsyncConnection(ElasticSearchConnectionMixin, AsyncAbstractIn
             leaf=True,
         ):
             return await wrapped(*args, **kwargs)
+
+
+class AsyncElasticsearchInstrumentation(ElasticsearchInstrumentation, AsyncAbstractInstrumentedModule):
+    name = "elasticsearch"
+
+    instrument_list = [
+        ("elasticsearch._async.client", "AsyncElasticsearch.delete_by_query"),
+        ("elasticsearch._async.client", "AsyncElasticsearch.search"),
+        ("elasticsearch._async.client", "AsyncElasticsearch.count"),
+        ("elasticsearch._async.client", "AsyncElasticsearch.update"),
+    ]
+
+    async def call(self, module, method, wrapped, instance, args, kwargs):
+        kwargs = self.inject_apm_params(method, kwargs)
+        return await wrapped(*args, **kwargs)
