@@ -1,3 +1,4 @@
 elasticsearch>=7.0,<8.0
 elasticsearch-async ; python_version >= '3.7'
+aiohttp ; python_version >= '3.6'
 -r reqs-base.txt
